--- a/20210929-Rmd/Makefile
+++ b/20210929-Rmd/Makefile
@@ -1,2 +1,8 @@
 all:
-	Rscript -e "rmarkdown::render('./test.Rmd')"
+	Rscript -e "rmarkdown::render('test.Rmd')"
+
+watch:
+	ls *.Rmd | entr make all
+
+clean:
+	\rm ./test.pdf
